Layout issue fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .App {
-  width: 100vw;
   height: 100vh;
-  overflow: hidden;
   position: relative;
 }
 
